# aoc2021

./: .gitignore  README.md  aoc2021.cabal
src/: Main1.hs  Main10.hs  Main2.hs  Main3.hs  Main4.hs  Main5.hs  Main6.hs  Main7.hs  Main8.hs  Main9.hs  Util.hs  day9.py
